# push_swap_tester

./: .gitignore  .gitigore  Makefile  README.md  push_swap_tester.py  pyproject.toml  setup.cfg
src/: const.py  exception.py  gen_int.py  parse.py  print.py  tester.py  tester_result.py
tests/src/: test_gen_int.py  test_parse.py
